# N_m3u8DL-CLI_Queue

./: .gitignore  AGENTS.md
.github/: dependabot.yml
.github/workflows/: build_latest.yml  ci.yml  package_gui.yml  release.yml
m3u8-queue-downloader/: .gitignore  RELEASE.md  index.html  package-lock.json  package.json  vite.config.js
m3u8-queue-downloader/scripts/: prepare-release.mjs  prepare-release.test.mjs  stage-bundled-resources.mjs  stage-bundled-resources.test.mjs  validate-bundled-resources.mjs
m3u8-queue-downloader/src/: App.svelte  app.css
m3u8-queue-downloader/src-tauri/: Cargo.toml  tauri.conf.json
m3u8-queue-downloader/src-tauri/capabilities/: default.json
m3u8-queue-downloader/src-tauri/src/: app_error.rs  app_state.rs  cli_output_store.rs  commands.rs  download_dir.rs  event_handlers.rs  history_store.rs  lib.rs  main.rs  models.rs  persistence.rs  progress_parser.rs  queue_manager.rs  runtime.rs  settings_store.rs  shutdown.rs  task_runner.rs  terminal_parser.rs  test_support.rs  tray.rs
m3u8-queue-downloader/src/lib/: CliConsolePanel.svelte  InputBar.svelte  SettingsPanel.svelte  StatusBar.svelte  TaskCard.svelte  TitleBar.svelte  cli-console.js  cli-console.test.js  cli-output.js  cli-output.test.js  duplicate-warnings.js  duplicate-warnings.test.js  history-store.js  history.js  history.test.js  logs.js  logs.test.js  progress.js  progress.test.js  queue-controls.js  queue-controls.test.js  queue-store.js  queue-store.test.js  runtime-events.js  session-progress.js  session-progress.test.js  settings-store.js  stores.js  waiting-dnd.js  (+3 more)
