[package]
name = "m3u8-queue-downloader"
version = "0.1.0"
description = "m3u8 Queue Downloader GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "m3u8_queue_downloader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-opener = "2"
dirs = "6"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
